# Examen_Ordinaria_Ejercicio2

./: CMakeLists.txt  actividad.cpp  actividad.h  alumno.cpp  alumno.h  evaluacion.cpp  evaluacion.h  main.cpp  test.cpp  test.h
